k8s/deployment-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-greeter-1
spec:
  selector:
    matchLabels:
      app: flask-greeter-1
  template:
    metadata:
      labels:
        app: flask-greeter-1
    spec:
      containers:
      - name: flask-greeter-1
        image: derjudge/flask-greeter:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
