k8s/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-greeter-1-svc
spec:
  selector:
    app: flask-greeter-1
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
